--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@
     line-height: 135%;
     letter-spacing: 0.01em;
     color: #000;
+    font-style: normal;
     display: flex;
     flex-direction: column;
     width: 240px;
@@ -56,13 +57,25 @@
 
 /* cover */
 
-.overlay {
+.cover {
     position: relative;
     background-image: url("../images/cover.jpg");
     background-size: cover;
+    max-width: 1100px;
+    max-height: 757px;
+}
+
+.overlay {
+    position: absolute;
+    background: #000;
+    opacity: 0.6;
+    width: 100%;
+    height: 100%;
+    top: 0;
 }
 
 .cover__title {
+    position: relative;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 100px;
@@ -73,6 +86,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    z-index: 2;
 }
 
 .cover__title-left {
@@ -105,6 +119,7 @@
 }
 
 .cover__subline {
+    position: relative;
     font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-size: 22px;
@@ -115,6 +130,7 @@
     margin-left: 78px;
     padding-bottom: 52px;
     word-spacing: 18px;
+    z-index: 2;
 }
 
 .cover__subline_span {
@@ -132,4 +148,64 @@
     border: solid 1px #fff;
     padding: 12px 32px 11px 31px;
     margin-left: 81px;
+}
+
+/* lots */
+
+.lots {
+    margin: 179px 24px 0 24px;
+}
+
+.lots__title {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.lots__card_title {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 120%;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #fff;
+}
+
+.lots__cards {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    gap: 25px;
+}
+
+.lots__card {
+    position: relative;
+    margin-top: 74px;
+    min-width: 334px;
+    min-height: 563px;
+}
+
+.lots__card_text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+}
+
+.lots__card_film {
+    background-image: url("../images/card-lot-01.jpg");
+    background-size: cover;
+}
+
+.lots__card_book {
+    background-image: url("../images/card-lot-02.jpg");
+    background-size: cover;
+}
+
+.lots__card_picture {
+    background-image: url("../images/card-lot-03.jpg");
+    background-size: cover;
 }
