--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 .header {
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
-    margin: 92px 24px 92px 24px;
+    margin: 82px 24px 92px 24px;
     align-items: center;
 }
 
@@ -162,6 +162,7 @@
     font-size: 40px;
     text-transform: uppercase;
     color: #000;
+    margin-left: 40px;
 }
 
 .lots__card_title {
@@ -175,6 +176,15 @@
     color: #fff;
 }
 
+.lots__card_subtitle {
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #fff;
+    text-underline-offset: 5px;
+}
+
 .lots__cards {
     display: grid;
     grid-template-columns: repeat(3, min-content);
@@ -183,29 +193,130 @@
 
 .lots__card {
     position: relative;
-    margin-top: 74px;
+    margin-top: 27px;
     min-width: 334px;
     min-height: 563px;
+    background-size: cover;
+    background-position: center;
 }
 
 .lots__card_text {
     position: absolute;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     z-index: 3;
+    height: 100%;
+    padding: 51px 40px 48px 40px;
 }
 
 .lots__card_film {
     background-image: url("../images/card-lot-01.jpg");
-    background-size: cover;
 }
 
 .lots__card_book {
     background-image: url("../images/card-lot-02.jpg");
-    background-size: cover;
 }
 
 .lots__card_picture {
     background-image: url("../images/card-lot-03.jpg");
-    background-size: cover;
+}
+
+.lots__subline {
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #000;
+    margin-top: 30px;
+    margin-left: 40px;
+}
+
+.lots__subline_link {
+    text-underline-offset: 5px;
+}
+
+/* about */
+
+.about {
+    display: flex;
+    gap: 72px;
+    margin: 151px 24px 0 24px;
+    
+}
+
+.about__column_logo {
+    background-color: #000;
+    width: 240px;
+    height: 240px;
+    margin-top: 32px;
+    margin-left: 47px;
+    border: solid 1px #000;
+    border-radius: 240px;
+}
+
+.about__column_image {
+    width: 148px;
+    height: 114px;
+    margin: 64px 45px 62px 46px;
+}
+
+.about__title {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.about__column_text {
+    margin-top: 133px;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+}
+
+.about__description {
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.about__description-extraspacing {
+    letter-spacing: 0.01em;
+}
+
+/* footer */
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 180px 50px 88px 50px;
+}
+
+.address__footer {
+    justify-self: start;
+}
+
+.footer__menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    margin-left: 0;
+}
+
+.social {
+    display: flex;
+    gap: 48px;
+    justify-content: end;
+}
+
+.social__image {
+    width: 48px;
+    height: 48px;
 }
