--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,6 @@
     background-image: url("../images/cover.jpg");
     background-size: cover;
     max-width: 1100px;
-    max-height: 757px;
 }
 
 .overlay {
@@ -72,6 +71,7 @@
     width: 100%;
     height: 100%;
     top: 0;
+    left: 0;
 }
 
 .cover__title {
@@ -201,7 +201,7 @@
 }
 
 .lots__card_text {
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
