ono-tebe-nado v3.2

--- a/styles/style.css
+++ b/styles/style.css
@@ -197,6 +197,7 @@
     display: grid;
     grid-template-columns: repeat(3, min-content);
     gap: 25px;
+    margin-bottom: 30px;
 }
 
 .lots__card {
